--- a/public/scss/_layout-nav.scss
+++ b/public/scss/_layout-nav.scss
@@ -130,9 +130,15 @@
   z-index: $z-nav-panel;
 
   .app-links-container {
+    height: 100%;
 
     ._main {
-
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-content: space-between;
+      height: 100%;
+      overflow-y: auto;
 
       .app-links {
         padding: 0;
@@ -264,7 +270,8 @@
 }
 
 .nav-footer{
-  margin-bottom: 10px;
+  padding-top: $gutter * 2;
+  padding-bottom: $gutter;
   text-align: center;
   width: 100%;
 
@@ -274,7 +281,7 @@
 
   a{
     font-size: 12px;
-    margin-bottom: 10px;
+    margin-bottom: $gutter / 2;
     color: #90a3d0;
     letter-spacing: 1px;
   }
@@ -358,7 +365,7 @@
   display: none !important;
 }
 .app-dashboard .navvbar-badge {
-  margin-top: 24px;
+  margin-top: 0;
   display: block;
   float: none !important;
   width: 100%;
